--- a/.gitignore
+++ b/.gitignore
@@ -24,9 +24,13 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
+lerna-debug.log*
+package.json.lerna_backup
 
 # local env files
 .env*.local
+.env.local
+.env.*.local
 
 # vercel
 .vercel
@@ -34,3 +38,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# vscode
+.vscode
+.devcontainer
+.npm
+.eslintcache
+
