--- a/package.json
+++ b/package.json
@@ -30,35 +30,43 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"lint:full": "next lint && npx tsc --noEmit && npx eslint '**/*.{js,jsx,ts,tsx}' && npx stylelint '**/*.{css,scss}'",
+		"lint:full": "npx tsc --noEmit && npx eslint '**/*.{js,jsx,ts,tsx}' && npx stylelint '**/*.{css,scss}'",
 		"prepare": "husky install",
 		"lint-staged": "npx lint-staged",
 		"format": "npx prettier --write '**/*.{js,ts,jsx,tsx,css,scss,json,htm,html,yml,eslintrc,huskyrc,lintstagedrc,prettierrc,stylelintrc}'"
 	},
 	"dependencies": {
+		"http-status-codes": "^2.2.0",
 		"next": "^13.4.12",
+		"openai": "^3.3.0",
 		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"react-dom": "^18.2.0",
+		"sass": "^1.64.2",
+		"zod": "^3.21.4"
 	},
 	"devDependencies": {
 		"@types/node": "^20.4.5",
 		"@types/react": "^18.2.17",
-		"@types/react-dom": "^18.0.11",
-		"eslint": "^8.5.0",
+		"@types/react-dom": "^18.2.7",
+		"@typescript-eslint/eslint-plugin": "^6.2.1",
+		"autoprefixer": "^10.4.14",
+		"eslint": "^8.46.0",
 		"eslint-config-next": "^13.4.12",
 		"eslint-config-prettier": "^8.9.0",
 		"eslint-plugin-prettier": "^5.0.0",
 		"eslint-plugin-security": "^1.7.1",
 		"eslint-plugin-unicorn": "^48.0.1",
-		"husky": "^8.0.0",
+		"husky": "^8.0.3",
 		"lint-staged": "^13.2.3",
+		"postcss": "^8.4.27",
 		"prettier": "^3.0.0",
 		"stylelint": "^15.10.2",
 		"stylelint-config-prettier": "^9.0.5",
 		"stylelint-config-recommended": "^13.0.0",
 		"stylelint-config-recommended-scss": "^12.0.0",
-		"stylelint-prettier": "^4.0.1",
+		"stylelint-prettier": "^4.0.2",
 		"stylelint-scss": "^5.0.1",
-		"typescript": "^4.5.5"
+		"tailwindcss": "^3.3.3",
+		"typescript": "^5.1.6"
 	}
 }
