--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
 		"lint-staged": "^13.2.3",
 		"postcss": "^8.4.27",
 		"prettier": "^3.0.0",
+		"prettier-plugin-tailwindcss": "^0.4.1",
 		"sass": "^1.64.2",
 		"stylelint": "^15.10.2",
 		"stylelint-config-prettier": "^9.0.5",
