--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
 		"eslint-config-next": "^14.1.0",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-prettier": "^5.1.3",
+		"eslint-plugin-react-refresh": "^0.4.5",
 		"eslint-plugin-unicorn": "^51.0.1",
 		"husky": "^9.0.11",
 		"lint-staged": "^15.2.2",
